# conwaygame

./: .gitignore  COPYING  Makefile.am  README  README.md  configure.ac  conwaygame.pro
src/: expects.h  game.cpp  game.h  image.cpp  image.h  main.cpp  rules.cpp  rules.h
src/lib/: Makefile.am  rules.cpp
src/lib/conwaygame/: memory.h  rules.h
test/: Makefile.am  test_rules.cpp
